# Proiect2PAOO

./: .gitignore  CMakeLists.txt
inc/: GameCharacter.hpp  Inventory.hpp  Item.hpp
src/: GameCharacter.cpp  Inventory.cpp  main.cpp
